# noodel-rating-api

./: .gitignore  Cargo.toml  Rocket.toml  noodles.db  test-noodle-list.html  test-rate.html  test.html
src/: cors.rs  db.rs  main.rs
