[package]
name = "noodle-rating-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.21.5"
zstd = "0.13.3"
uuid = { version = "1.6.1", features = ["v4"] }
tempfile = "3.19.1"
